--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,47 @@
-body {
-  background-color: tomato;
+* {
+  box-sizing: border-box;
+}
+.container {
+  display: flex;
+}
+section {
+  margin: 0 2rem;
+  padding: 1rem;
+  box-shadow: 0px 4px 4px hsla(0, 0%, 0%, 0.15);
+}
+form {
+  margin: 1rem;
+  padding: 0 1rem;
+  font-size: 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+label {
+  display: block;
+  color: #757575;
+}
+input {
+  display: block;
+}
+button {
+  --h: 2rem;
+  height: var(--h);
+  line-height: var(--h);
+  min-width: 10.5rem;
+  margin: 1rem auto;
+  display: block;
+  padding: 0 1rem;
+  text-align: center;
+  font-weight: 700;
+  letter-spacing: 0.08rem;
+  color: #fff;
+  border-style: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+button[type='submit'] {
+  background-color: #2196f3;
+}
+button[type='reset'] {
+  background-color: crimson;
 }
