--- a/css/styles.css
+++ b/css/styles.css
@@ -1,61 +1,10 @@
-
-}
-body {
-  background-color: blue;
-}
-.form-label-text {
-  /* display: block; */
-  margin-bottom: 20px;
-  font-size: 14px;
-  line-height: 1.14;
-  font-weight: 700;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-
-  color: black;
+.icon {
+  width: 60px
+  height: 60px;
+  fill: black;
 }
 
-.form-input {
-  display: block;
-  width: 358px;
-  height: 50px;
- 
-  padding-left: 16px;
-
-  line-height: 20px;
-  letter-spacing: 0.03em;
-
-  color: black;
-
-  background-color:rgb(201, 200, 200);
-
-}
-
-.form-label
-{margin: 0;}
-.form-btn {
-  display: inline-flex;
-  align-items: center;
-
-  min-width: 200px;
-  min-height: 50px;
-  padding: 10px 29px;
-
-  color: white;
-  font-weight: 700;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-
-  background: blue;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-}
-
-.form-btn-text {
-  margin-right: 10px;
-}
-.form-icon-send {
-  width: 24px;
-  height: 24px;
-  fill: currentColor;
+.clock {
+  --clock-color: blue;
+  --clock-accent-color: green;
 }
